--- a/zh-CN/7.reference/1.oceanbase-database-concepts/9.storage-architecture/1.storage-architecture-overview.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/9.storage-architecture/1.storage-architecture-overview.md
@@ -52,7 +52,7 @@ OceanBase 数据库本质上是一个基线加增量的存储引擎，在保持 
 
 * 转储
 
-  OceanBase 数据库中的转储即 Minor Compaction 概念可以理解和其他 LSM-Tree 架构数据库的 Compaction 概念类似，主要负责 MemTable 刷盘转成 SSTable 以及多个 SSTable 之间的 Compaction 策略选择以及动作。OceanBase 数据库中采用的是 leveled 结合 size tired 的 Compaction 策略，大致可以分为三层，其中 L1 和 L2 就是固定的 leveled 层次，L0 层是 size tired，L0 内部还会继续根据写放大系数以及 SSTable 个数进行内部 Compaction 动作。
+  OceanBase 数据库中的转储即 Minor Compaction 概念可以理解和其他 LSM-Tree 架构数据库的 Compaction 概念类似，主要负责 MemTable 刷盘转成 SSTable 以及多个 SSTable 之间的 Compaction 策略选择以及动作。OceanBase 数据库中采用的是 leveled 结合 size tiered 的 Compaction 策略，大致可以分为三层，其中 L1 和 L2 就是固定的 leveled 层次，L0 层是 size tiered，L0 内部还会继续根据写放大系数以及 SSTable 个数进行内部 Compaction 动作。
   
 * 合并
 
