--- a/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/2.deploy-nfs.md
+++ b/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/2.deploy-nfs.md
@@ -78,7 +78,7 @@
    2. 执行以下命令，将同时发起的 NFS 请求数量修改为 128。
 
       ```sql
-      sysctl -w sunrpc.tcp_max_slot_table_entries=128
+      sudo sysctl -w sunrpc.tcp_max_slot_table_entries=128
       ```
 
       命令执行成功后，可以通过 `cat /proc/sys/sunrpc/tcp_max_slot_table_entries` 命令查看设置是否生效，如果返回值为 128，则说明修改成功。
@@ -110,7 +110,7 @@
    2. 执行以下命令，将同时发起的 NFS 请求数量修改为 128。
 
       ```sql
-      sysctl -w sunrpc.tcp_max_slot_table_entries=128
+      sudo sysctl -w sunrpc.tcp_max_slot_table_entries=128
       ```
 
       命令执行成功后，可以通过 `cat /proc/sys/sunrpc/tcp_max_slot_table_entries` 命令查看设置是否生效，如果返回值为 128，则说明修改成功。
