modify doc issues

--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/5.delete-a-node.md
@@ -118,13 +118,13 @@ Unit 自动迁移过程中，迁移任务会占用迁出节点与迁入节点的
 
       该命令可多次执行，如果手动迁移 Unit 失败，可以根据报错信息解决问题后再重新执行。
 
-      更多关于 Unit 迁移的操作及说明，请参见 [副本迁移](暂时无法加链接)。
+      更多关于 Unit 迁移的操作及说明，请参见 [Unit 迁移](../../3.replica-management/2.replica-distribution/2.common-operations/7.unit-migration.md)。
 
 3. 执行以下命令，删除节点。
 
    语句如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM DELETE SERVER 'svr_ip:svr_port' [,'svr_ip:svr_port'...] [ZONE [=] 'zone_name']
    ```
 
@@ -138,13 +138,13 @@ Unit 自动迁移过程中，迁移任务会占用迁出节点与迁入节点的
 
    删除 `zone1` 中的一台 OBServer 服务器，示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM DELETE SERVER "172.xx.xx.xx:2882" zone='zone1'
    ```
 
 4. 待所有操作结束后，查询 `oceanbase.DBA_OB_SERVERS` 视图，确认节点是否删除成功。
 
-   ```sql
+   ```shell
    obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
    ```
 
@@ -170,7 +170,7 @@ Cancel Delete Server 的具体操作如下：
 
    语句如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM CANCEL DELETE SERVER 'svr_ip:svr_port' [,'svr_ip:svr_port'...] [ZONE [=] 'zone_name']
    ```
 
@@ -184,13 +184,13 @@ Cancel Delete Server 的具体操作如下：
 
    示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM CANCEL DELETE SERVER '172.xx.xx.xx:2882' zone='zone1';
    ```
 
 3. 查询 `oceanbase.DBA_OB_SERVERS` 视图，确认节点是否取消删除成功。
 
-   ```sql
+   ```shell
    obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
    ```
 
@@ -212,4 +212,4 @@ Cancel Delete Server 的具体操作如下：
 
 * [删除 Zone](9.delete-a-zone.md)
 
-* [副本迁移](链接暂时无法加)
+* [Unit 迁移](../../3.replica-management/2.replica-distribution/2.common-operations/7.unit-migration.md)
