--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/7.replace-a-node.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/7.replace-a-node.md
@@ -45,7 +45,7 @@
 
       语句如下：
 
-      ```sql
+      ```shell
       obclient [(none)]> SELECT  unit_id FROM  oceanbase.DBA_OB_UNITS WHERE SVR_IP = 'svr_ip';
       ```
 
@@ -53,7 +53,7 @@
 
       查询示例如下：
 
-      ```sql
+      ```shell
       obclient [(none)]> SELECT unit_id FROM  oceanbase.DBA_OB_UNITS WHERE SVR_IP = '172.xx.xx.xx';
       +---------+
       | unit_id |
@@ -70,7 +70,7 @@
 
       语句如下：
 
-      ```sql
+      ```shell
       obclient [(none)]> ALTER SYSTEM MIGRATE UNIT unit_id DESTINATION 'svr_ip:svr_port';
       ```
 
@@ -84,13 +84,13 @@
 
       迁移示例如下：
 
-      ```sql
+      ```shell
       obclient [(none)]> ALTER SYSTEM MIGRATE UNIT 1016 DESTINATION '172.xx.xx.xx:2882';
       ```
 
    4. 查询 `oceanbase.DBA_OB_UNIT_JOBS` 视图，确认 Unit 的迁移进度。
 
-      ```sql
+      ```shell
       obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_UNIT_JOBS WHERE JOB_TYPE = 'MIGRATE_UNIT';
       +--------+--------------+------------+-------------+----------+----------------------------+----------------------------+-----------+---------+----------+------------+------------+-------------+
       | JOB_ID | JOB_TYPE     | JOB_STATUS | RESULT_CODE | PROGRESS | START_TIME                 | MODIFY_TIME                | TENANT_ID | UNIT_ID | SQL_TEXT | EXTRA_INFO | RS_SVR_IP  | RS_SVR_PORT |
@@ -101,7 +101,7 @@
 
       如果查询结果为空，则表示 Unit 迁移完成。
 
-   更多关于 Unit 迁移的操作及说明，请参见 [副本迁移](暂时无法加链接)。
+   更多关于 Unit 迁移的操作及说明，请参见 [Unit 迁移](../../3.replica-management/2.replica-distribution/2.common-operations/7.unit-migration.md)。
 
 4. 等待旧节点上的所有 Unit 迁移完成后，将旧节点删除。
 
@@ -111,7 +111,7 @@
 
       语句如下：
 
-      ```sql
+      ```shell
       obclient [(none)]> ALTER SYSTEM DELETE SERVER 'svr_ip:svr_port' [,'svr_ip:svr_port'...] [ZONE [=] 'zone_name']
       ```
 
@@ -125,13 +125,13 @@
 
       示例如下：
 
-      ```sql
+      ```shell
       obclient [(none)]> ALTER SYSTEM DELETE SERVER "172.xx.xx.xx:2882" zone='zone1'
       ```
 
    2. 待操作结束后，查询 `oceanbase.DBA_OB_SERVERS` 视图，确认旧节点是否删除成功。
 
-      ```sql
+      ```shell
       obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
       ```
 
