--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/12.delete-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/12.delete-tenant.md
@@ -4,7 +4,7 @@ OceanBase 数据库支持通过 `DROP TENANT` 语句删除租户。
 
 删除租户后，租户下的数据库和表也同时被删除。但是租户使用的资源池不会被删除。资源池可以继续给其他租户使用。
 
-* 当系统租户开启回收站功能时，`DROP TENANT` 操作表示删除的租户会进入回收站。对于回收站中的租户，后续系统租户可以通过租户级回收站功能进一步删除或恢复该租户，租户级回收站相关操作参见 [租户回收站](../../../7.reference/2.administrator-guide/5.backup-and-recovery/1.flashback/3.tenant-recycle.md)。
+* 当系统租户开启回收站功能时，`DROP TENANT` 操作表示删除的租户会进入回收站。对于回收站中的租户，后续系统租户可以通过租户级回收站功能进一步删除或恢复该租户，回收站相关操作参见 [回收站概述](../../4.high-availability/3.recyclebin-management/1.recyclebin-overview.md)。
 
 * 当系统租户关闭回收站功能时，`DROP TENANT` 操作会直接删除租户，租户下的数据库和表也同时被删除。
 
@@ -67,7 +67,7 @@ OceanBase 数据库支持通过 `DROP TENANT` 语句删除租户。
     obclient> DROP TENANT mq_t1;
     ```
 
-    `DROP TENANT` 语句的详细说明，参见 [DROP TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/11.drop-tenant.md)。
+    `DROP TENANT` 语句的详细说明，参见 [DROP TENANT](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/11.drop-tenant.md)。
 
 6. 查看 `DBA_OB_TENANTS` 视图，确认租户已经删除成功。
 
