--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/14.delete-resource-pool.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/14.delete-resource-pool.md
@@ -52,7 +52,7 @@
     Query OK, 0 rows affected 
     ```
 
-    `DROP RESOURCE POOL` 语句的详细说明，参见 [DROP RESOURCE POOL](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/9.drop-resource-pool.md)。
+    `DROP RESOURCE POOL` 语句的详细说明，参见 [DROP RESOURCE POOL](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/9.drop-resource-pool.md)。
 
 5. 查看 `DBA_OB_RESOURCE_POOLS` 视图，确认资源池删除成功。
 
