--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/15.delete-resource-specification.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/15.delete-resource-specification.md
@@ -54,7 +54,7 @@
     Query OK, 0 rows affected
     ```
 
-    `DROP RESOURCE UNIT` 语句的详细说明，参见 [DROP RESOURCE UNIT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/10.drop-resource-unit.md)。
+    `DROP RESOURCE UNIT` 语句的详细说明，参见 [DROP RESOURCE UNIT](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/10.drop-resource-unit.md)。
 
 5. 查看 `DBA_OB_UNIT_CONFIGS` 视图，确认资源规格删除成功。
 
