--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/9.modify-resource-pool-properties.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/9.modify-resource-pool-properties.md
@@ -70,7 +70,7 @@
 
     * `ZONE_LIST`：资源池的 Zone 分布。
 
-    `ALTER RESOURCE POOL` 语句的详细说明，参见 [ALTER RESOURCE POOL](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/3.alter-resource-pool.md)。
+    `ALTER RESOURCE POOL` 语句的详细说明，参见 [ALTER RESOURCE POOL](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/3.alter-resource-pool.md)。
 
     `ALTER RESOURCE TENANT` 语句的详细说明，参见 [ALTER RESOURCE TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/2.alter-resource-tenant.md)。
 
