--- a/zh-CN/6.manage/4.high-availability/3.recyclebin-management/4.restore-the-recyclebin-objects.md
+++ b/zh-CN/6.manage/4.high-availability/3.recyclebin-management/4.restore-the-recyclebin-objects.md
@@ -29,7 +29,7 @@
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
+   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
 
 2. 执行 `SHOW RECYCLEBIN` 语句，获取回收站中对象的名称。
 
@@ -101,7 +101,7 @@
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
+   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
 
 2. 执行 `SHOW RECYCLEBIN` 语句，获取回收站中对象的名称。
 
@@ -172,7 +172,7 @@
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
+   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
 
 2. 执行 `SHOW RECYCLEBIN` 语句，获取回收站中对象的名称。
 
