--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/2.authority-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/2.authority-of-mysql-mode.md
@@ -6,7 +6,7 @@
 
 当前用户必须拥有被授予的权限（例如，`test1` 把表 `t1` 的 `SELECT` 权限授予 `test2`，则 `test1` 必须拥有表 `t1` 的 `SELECT` 的权限），并且拥有 `GRANT OPTION`权限，才能授予成功。
 
-查看当前拥有权限的操作请参见 [查看用户权限](../3.mysql-mode/4.view-user-permissions-of-mysql-mode.md)。
+查看当前拥有权限的操作请参见 [查看用户权限](../2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md)。
 
 ### 注意事项
 
@@ -133,4 +133,4 @@ user_name [IDENTIFIED BY [PASSWORD] 'password']
     obclient> GRANT ALL ON db1.tb1_name TO test;
     ```
 
-更多 `GRANT` 语句的信息请参见 [GRANT](../../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/35.grant-of-mysql-mode.md)。
+更多 `GRANT` 语句的信息请参见 [GRANT](../../../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/35.grant-of-mysql-mode.md)。
