--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
@@ -17,7 +17,7 @@
 
     语句如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=xxx [PIECE_SWITCH_INRERVAL=xxx] [BINDING=xxx]';
    ```
 
@@ -31,18 +31,18 @@
        * NFS
 
            <main id="notice" type='notice'>
-           <h4>注意</h4>
-           <p>使用 NFS 作为归档目的端时，需要注意以下事项：</p>
-           <ul>
-           <li><code>LOCATION</code> 的值不支持设置为带有问号（?）的字符串。</li>
-           <li><code>LOCATION</code> 的值必须设置为绝对路径，保证 OBServer 服务器对 <code>LOCATION</code> 具有读写权限。</li>
-           <li>必须保证所有 OBServer 服务器都挂载了同一个服务器的 NFS。同时，为保证归档顺利进行，务必使用本文档中建议的参数挂载 NFS。挂载 NFS 的具体操作，请参见  <a href="../2.deploy-nfs.md">部署 NFS 客户端</a>。</li>
-           </ul>
+            <h4>注意</h4>
+            <p>使用 NFS 作为归档目的端时，需要注意以下事项：</p>
+            <ul>
+            <li><code>LOCATION</code> 的值不支持设置为带有问号（?）的字符串。</li>
+            <li><code>LOCATION</code> 的值必须设置为绝对路径，保证 OBServer 服务器对 <code>LOCATION</code> 具有读写权限。</li>
+            <li>必须保证所有 OBServer 服务器都挂载了同一个服务器的 NFS。同时，为保证归档顺利进行，务必使用本文档中建议的参数挂载 NFS。挂载 NFS 的具体操作，请参见  <a href="../2.deploy-nfs.md">部署 NFS 客户端</a>。</li>
+            </ul>
            </main>
 
             当归档目的端的介质为 NFS 时，设置归档目的端的示例如下：
 
-            ```sql
+            ```shell
             obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive';
             ```
 
@@ -71,7 +71,7 @@
 
             当归档目的端的介质为 OSS 时，设置归档目的端，并配置 `tagging` 清理模式的示例如下：
 
-            ```sql
+            ```shell
             obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=oss://oceanbase-test-bucket/backup/archive?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=tagging';
             ```
 
@@ -87,7 +87,7 @@
 
         示例如下：
 
-        ```sql
+        ```shell
         obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive BINDING=Optional';
         
         obclient> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive BINDING=Mandatory';
@@ -99,7 +99,7 @@
 
         例如，配置归档路径且每隔一天切分一个日志 `piece` 的示例如下：
 
-        ```sql
+        ```shell
         obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive BINDING=Optional PIECE_SWITCH_INTERVAL=1d';
         ```
 
@@ -117,7 +117,7 @@
 
 您需要重新执行以下语句进行修改。
 
-```sql
+```shell
 obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=file:///data/nfs/backup/archive BINDING=Mandatory PIECE_SWITCH_INTERVAL=2d';
 ```
 
