--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/8.view-parameters-of-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/8.view-parameters-of-log-archive.md
@@ -10,7 +10,7 @@
 
 2. 执行以下语句，查看所有租户的 `LOG_ARCHIVE_DEST` 配置参数。
 
-    ```sql
+    ```shell
     obclient [(none)]> SELECT * FROM oceanbase.CDB_OB_ARCHIVE_DEST;
     +-----------+---------+-----------------------+-------------------------------------------------------------------------------------------------------------------------+
     | TENANT_ID | DEST_NO | NAME                  | VALUE                                                                                                                   |
@@ -43,13 +43,13 @@
 
     `1004` 租户 `LOG_ARCHIVE_DEST` 参数配置的命令如下：
 
-    ```sql
+    ```shell
     obclient> ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=oss://oceanbase-test-bucket/backup/archive?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=tagging BINDING=Mandatory CHECKPOINT_INTERVAL=2m PIECE_SWITCH_INTERVAL=1d';
     ```
 
     系统为该路径分配的 `dest_id` 是 `1`，且该路径的归档也已经打开。
 
-更多 `CDB_OB_ARCHIVE_DEST` 视图的说明，请参见 [CDB_OB_ARCHIVE_DEST](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/131.oceanbase-cdb_ob_archive_dest-of-mysql-mode.md)。
+更多 `CDB_OB_ARCHIVE_DEST` 视图的说明，请参见 [CDB_OB_ARCHIVE_DEST](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/131.oceanbase-cdb_ob_archive_dest-of-mysql-mode.md)。
 
 ## 用户租户查看本租户的归档参数
 
@@ -58,15 +58,15 @@
 1. 租户管理员登录到数据库。
 
    <main id="notice" type='explain'>
-   <h4>说明</h4>
-   <p>MySQL 租户的管理员用户为 <code>root</code> 用户，Oracle 租户的管理员用户为 <code>SYS</code> 用户。</p>
+    <h4>说明</h4>
+    <p>MySQL 租户的管理员用户为 <code>root</code> 用户，Oracle 租户的管理员用户为 <code>SYS</code> 用户。</p>
    </main>
 
 2. 执行以下语句，查看当前租户的 `LOG_ARCHIVE_DEST` 配置参数。
 
     MySQL 租户查看本租户的`LOG_ARCHIVE_DEST` 参数的示例如下：
 
-    ```sql
+    ```shell
     obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_ARCHIVE_DEST;
     +---------+-----------------------+---------------------------------+
     | DEST_NO | NAME                  | VALUE                           |
