--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/3.initiate-incremental-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/3.initiate-incremental-data-backup.md
@@ -10,7 +10,7 @@
 
 完成准备工作后，您可以通过以下方式发起增量数据备份。
 
-假设当前集群中有 3 个租户，分别是 `sys` ，`mysql_tenant` 和 `oracle_tenant`。
+假设当前集群中有 3 个租户，分别是 `sys`、`mysql_tenant` 和 `oracle_tenant`。
 
 ### 系统租户发起增量备份
 
@@ -24,7 +24,7 @@
 
       该方式会对集群中的所有租户发起增量数据备份。
 
-      ```sql
+      ```shell
       obclient [(none)]> ALTER SYSTEM BACKUP INCREMENTAL DATABASE;
       ```
 
@@ -36,13 +36,13 @@
 
       对 `mysql_tenant` 租户发起增量数据备份的示例如下：
 
-      ```sql
+      ```shell
       obclient [(none)]> ALTER SYSTEM BACKUP INCREMENTAL TENANT = mysql_tenant;
       ```
 
       <main id="notice" type='explain'>
-      <h4>说明</h4>
-      <p>同时指定多个租户时，租户名之间使用英文逗号 (`,`) 分隔。</p>
+         <h4>说明</h4>
+         <p>同时指定多个租户时，租户名之间使用英文逗号 (`,`) 分隔。</p>
       </main>
 
       命令执行成功后，在本示例中，系统会对集群中的 `mysql_tenant` 租户发起增量数据备份。
@@ -59,7 +59,7 @@
 
 2. 执行以下语句，发起增量数据备份。
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM BACKUP INCREMENTAL DATABASE;
    ```
 
