--- a/zh-CN/6.manage/6.backup-and-recovery/5.clear-backup-data/2.stop-cleaning-backup-data.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/5.clear-backup-data/2.stop-cleaning-backup-data.md
@@ -45,7 +45,7 @@
 
    语句如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM DROP DELETE BACKUP POLICY policy_name;
    ```
 
@@ -53,7 +53,7 @@
 
    删除当前租户的清理策略 `default` 的示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM DROP DELETE BACKUP POLICY 'default';
    ```
 
@@ -69,7 +69,7 @@
 
       示例如下：
 
-      ```sql
+      ```shell
       obclient [(none)]> SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_POLICY  WHERE tenant_id = 1002;
       Empty set
       ```
@@ -78,13 +78,13 @@
 
       * MySQL 租户
 
-         ```sql
+         ```shell
          obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_BACKUP_DELETE_POLICY;
          ```
 
       * Oracle 租户
 
-         ```sql
+         ```shell
          obclient [SYS]> SELECT * FROM sys.DBA_OB_BACKUP_DELETE_POLICY;
          ```
 
