--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/1.preparation-before-recovery.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/1.preparation-before-recovery.md
@@ -16,21 +16,21 @@
 
    示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> CREATE RESOURCE UNIT box_16c96g MAX_CPU 16, MEMORY_SIZE = '2G', MAX_IOPS 10240, MIN_IOPS=10240;
    ```
 
-   创建资源单元的详细操作及说明请参见 [创建资源单元](../../../../7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/2.create-a-resource-unit.md)。
+   创建资源单元的详细操作及说明请参见 [创建资源单元](../../../7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/2.create-a-resource-unit.md)。
 
 3. 创建 Resource Pool（资源池）。
 
    示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> CREATE RESOURCE POOL restore_pool unit = 'box_16c96g', unit_num = 1, zone_list = ('z1','z2','z3');
    ```
 
-   创源资源池的详细操作及说明请参见 [创建资源池](../../../../7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/4.create-a-resource-pool.md)。
+   创源资源池的详细操作及说明请参见 [创建资源池](../../../7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/4.create-a-resource-pool.md)。
 
 4. 执行以下语句，设置加密信息。
 
@@ -39,7 +39,7 @@
    <p>如果未加密或恢复时可以访问原来的密钥管理服务，则跳过本步骤。</p>
    </main>
 
-   ```sql
+   ```shell
    obclient [(none)]> SET @kms_encrypt_info = '<加密string>';
    ```
 
@@ -54,19 +54,19 @@
 
    检查 `restore_concurrency` 是否为 `0`，`0` 表示关闭，您可按需设定。如果为 `0` ，则需要执行以下语句：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM SET restore_concurrency = 10;
    ```
 
 6. （可选）设置恢复的密码。
 
-   ```sql
+   ```shell
    obclient [(none)]> SET DECRYPTION IDENTIFIED BY 'password';
    ```
 
    只有在备份时添加了密码的场景下才需要设置恢复的密码。同时如果全量备份 + 增量备份设置的密码不一样，则需要输入多个密码，密码之间使用逗号分隔。示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> SET DECRYPTION IDENTIFIED BY 'password1'，'password2';
    ```
 
