--- a/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
+++ b/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
@@ -2,7 +2,7 @@
 
 OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器和主流的虚拟机。 OceanBase 数据库支持单副本部署，并且单副本 OceanBase 集群还可以扩容（增加节点），所以也称为集群。本节主要介绍在普通的物理服务器上通过使用 RPM 包安装单副本 OceanBase 集群。
 
-有关 OceanBase 集群部署的详细信息，请参见 [部署简介](../../4.deploy-oceanbase/1.deploy-overview.md)。
+有关 OceanBase 集群部署的详细信息，请参见 [部署简介](../../4.deploy/1.deploy-overview.md)。
 
 ## 服务器和介质准备
 
@@ -53,7 +53,7 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
    [root@hostname /]# rpm -ivh t-oceanbase-antman-x.x.x-xxxxxxxxxxxx.alios7.x86_64.rpm
    ```
 
-   安装 Antman 的详细信息，请参见 [安装 oat-cli](../../4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/1.install-oat-cli.md)。
+   安装 Antman 的详细信息，请参见 [安装 oat-cli](../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/1.install-oat-cli.md)。
 
 3. 添加 admin 用户。
 
@@ -213,7 +213,7 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
 
 OceanBase 集群部署完成后，数据库中默认创建 sys 租户。此后可以根据业务需要使用 sys 租户新建普通租户。
 
-创建普通租户的详细信息，请参见 [创建租户](../../4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/5.create-oceanbase-tenant-command-line/2.create-tenant.md)。
+创建普通租户的详细信息，请参见 [创建租户](../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/5.create-oceanbase-tenant-command-line/2.create-tenant.md)。
 
 ### 连接 OceanBase 数据库
 
