--- a/zh-CN/2.quickstart/1.quickly-experience-oceanbase/2.quickly-experience-oceanbase-for-community.md
+++ b/zh-CN/2.quickstart/1.quickly-experience-oceanbase/2.quickly-experience-oceanbase-for-community.md
@@ -42,7 +42,7 @@ all-in-one package 提供了两种安装方式：
 
 #### 离线安装 all-in-one package
 
-1. 从 [OceanBase 社区下载中心](https://open.oceanbase.com/softwareCenter/community) 下载最新的 all-in-one package 安装包，oceanbase-all-in-one.4.0.0.0-beta-100120221102135736.el7.x86_64.tar.gz。
+1. 从 [OceanBase 下载中心](https://www.oceanbase.com/softwarecenter) 下载最新的 all-in-one package 安装包。
 
 2. 执行以下命令解压安装包并进入安装目录。
 
@@ -108,9 +108,9 @@ all-in-one package 提供了两种安装方式：
   ```
 
   <main id="notice" type='notice'>
-                <h4>注意</h4>
-                <p>安装完成后需执行 <code>source ~/.oceanbase-all-in-one/bin/env.sh</code> 否则直接执行 <code>which obd</code> 会失败。</p>
-              </main>
+        <h4>注意</h4>
+        <p>安装完成后需执行 <code>source ~/.oceanbase-all-in-one/bin/env.sh</code> 否则直接执行 <code>which obd</code> 会失败。</p>
+  </main>
 
   执行 `which obd` 和 `which obclient` 检测是否安装成功，如果可以找到 oceanbase-all-in-one 下的 obd 和 obclient 路径，则表示安装成功。
 
@@ -201,7 +201,7 @@ obclient>
 
 您也可以通过参数控制部署的组件、组件的版本、配置以及部署的目录。更多关于 `obd demo` 命令的介绍，参见 [快速部署命令](https://www.oceanbase.com/docs/community-obd-cn-10000000000900365)。
 
-当安装 grafana 或 prometheus 时，会输出 grafana 或 prometheus 的访问地址，类似以下输出。在阿里云或其他云环境下，因为安装程序可能无法获取公网 IP，可能输出的是内网地址（在本例中，为 192.168.1.1），此 IP 非公网地址，您需要使用正确的地址。
+当安装 grafana 或 prometheus 时，会输出 grafana 或 prometheus 的访问地址，类似以下输出。在阿里云或其他云环境下，因为安装程序可能无法获取公网 IP，可能输出的是内网地址（在本例中，为 `192.168.1.1`），此 IP 非公网地址，您需要使用正确的地址。
 
 ```test
 -prometheus program health check ok
