--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/12.view-cluster-parameters.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/12.view-cluster-parameters.md
@@ -44,7 +44,7 @@
 
    示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> SHOW PARAMETERS LIKE '%syslog_level%';
    +-------+----------+----------------+----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
    | zone  | svr_type | svr_ip         | svr_port | name         | data_type | value | info                                                                                                                   | section  | scope   | source  | edit_level        |
@@ -120,7 +120,7 @@
    3 rows in set
    ```
   
-  有关 `GV$OB_PARAMETERS` 视图的更多信息，请参见 [GV$OB_PARAMETERS](暂时无法加链接)。
+  有关 `GV$OB_PARAMETERS` 视图的更多信息，请参见 [GV$OB_PARAMETERS（MySQL 模式）](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/6.gv-ob_parameters-of-mysql-mode.md) 和 [GV$OB_PARAMETERS（Oracle 模式）](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/6.gv-ob_parameters-of-oracle-mode.md)。
 
 ## 相关文档
 
@@ -130,6 +130,6 @@
 
 * [修改集群配置项](13.modify-cluster-parameters.md)
 
-* [租户系统变量](暂时无法添加链接)
+* [租户系统变量](../../2.tenant-management/5.system-variable-of-tenant.md)
 
 有关每个配置项的详细介绍，请参见 [系统配置项](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview-2.md)。
