--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/13.modify-cluster-parameters.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/13.modify-cluster-parameters.md
@@ -113,6 +113,6 @@
 
 * [查看集群配置项](12.view-cluster-parameters.md)
 
-* [租户系统变量](暂时无法添加链接)
+* [租户系统变量](../../2.tenant-management/5.system-variable-of-tenant.md)
 
 有关每个配置项的详细介绍，请参见 [系统配置项](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview-2.md)。
