--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.tenant-scale-in-and-out/2.adjust-resource-specifications.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.tenant-scale-in-and-out/2.adjust-resource-specifications.md
@@ -12,11 +12,11 @@
 
 * 进行租户缩容前，建议进行一轮转储以便释放租户正在使用的内存。
 
-  手动触发转储的相关操作，参见 [手动触发转储](../../../7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md)。
+  手动触发转储的相关操作，参见 [手动触发转储](../../../../7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md)。
 
 * 查看集群中资源的分配情况，了解集群中资源的使用情况。
 
-  查看集群节点的资源总量和分配状态的相关操作，参见 [查看集群的资源信息](../4.view-tenant-information.md)。
+  查看集群节点的资源总量和分配状态的相关操作，参见 [查看集群的资源信息](../../../../7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md)。
 
 ## 注意事项
 
@@ -41,7 +41,7 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
   在分配 Unit 时，系统会根据配置项 `resource_hard_limit` 的值来分配 CPU 资源。该配置项的默认值为 `100` ，表示不允许超卖，取值范围为 `[0, 10000]`。
 
-  更多配置项 `resource_hard_limit` 的说明信息，参见 [resource_hard_limit](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/168.resource_hard_limit.md)。
+  更多配置项 `resource_hard_limit` 的说明信息，参见 [resource_hard_limit](../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/168.resource_hard_limit.md)。
 
 ## 调整资源规格
 
@@ -232,7 +232,7 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 * 通过 `oceanbase.GV$OB_SERVERS` 视图查询资源上限值。
 
-  关于 `oceanbase.GV$OB_SERVERS` 视图的详细介绍，参见 [GV$OB_SERVERS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/9.gv-ob_servers-of-mysql-mode.md)。
+  关于 `oceanbase.GV$OB_SERVERS` 视图的详细介绍，参见 [GV$OB_SERVERS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/9.gv-ob_servers-of-mysql-mode.md)。
 
   示例如下：
 
@@ -253,7 +253,7 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 * 通过 `oceanbase.GV$OB_UNITS` 视图查询集群中所有租户的资源分配情况。
 
-  关于 `oceanbase.GV$OB_UNITS` 视图的详细介绍，参见 [GV$OB_UNITS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/13.gv-ob_units-of-mysql-mode.md)。
+  关于 `oceanbase.GV$OB_UNITS` 视图的详细介绍，参见 [GV$OB_UNITS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/13.gv-ob_units-of-mysql-mode.md)。
 
   示例如下：
 
