--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.locality-common-operations/3.add-replica.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.locality-common-operations/3.add-replica.md
@@ -6,7 +6,7 @@
 
 ## 前提条件
 
-增加副本之前，首先需要确认租户在目标 Zone 上是否有资源池，如果没有，则需要调整现有资源池的 Zone 列表，或者新增一个资源池给租户，如果新增资源池，要求资源池的 Unit 个数与租户已有的资源池一致，调整资源池或新增资源池的详细操作，参见 [修改资源池属性](pr 合并后添加)或 [创建资源池](pr 合并后添加)。
+增加副本之前，首先需要确认租户在目标 Zone 上是否有资源池，如果没有，则需要调整现有资源池的 Zone 列表，或者新增一个资源池给租户，如果新增资源池，要求资源池的 Unit 个数与租户已有的资源池一致，调整资源池或新增资源池的详细操作，参见 [修改资源池属性](../../../../7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/3.modifies-the-resource-pool.md)或 [创建资源池](../../../2.tenant-management/5.commom-tenant-operations/3.create-tenant.md)。
 
 同时还需要确认待变更的 Zone 上资源单元和资源池的状态。如果 Zone 上的节点资源不足导致无法存放租户需要的资源单元，将导致无法进行 Locality 变更。
 
@@ -99,7 +99,7 @@
 
 通过步骤 3 与步骤 6 的查询比较，租户 `mysql001` 的 Locality 由原来的 `FULL{1}@zone1, FULL{1}@zone2` 变为 `FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone3` ，租户 `mysql001` 在 zone1、zone2、zone3 上分别有一个全能型副本。
 
-通过增加副本会导致租户 Locality 与租户 Primary Zone 不匹配，如果增加的 Zone 参与切主，则需要修改 Primary Zone，关于修改 Primary Zone 的操作，参见 [调整 Primary Zone](../../5.tenant-expansion-and-contraction/4.adjust-primary-zone.md)；如果增加的 Zone 不参与切主，则不需要修改 Primary Zone。
+通过增加副本会导致租户 Locality 与租户 Primary Zone 不匹配，如果增加的 Zone 参与切主，则需要修改 Primary Zone，关于修改 Primary Zone 的操作，参见 [调整 Primary Zone](../../../2.tenant-management/5.commom-tenant-operations/8.tenant-scale-in-and-out/4.adjust-primary-zone.md)；如果增加的 Zone 不参与切主，则不需要修改 Primary Zone。
 
 ## 相关文档
 
