--- a/zh-CN/6.manage/4.high-availability/2.multi-replica-disaster-recovery/3.database-high-availability.md
+++ b/zh-CN/6.manage/4.high-availability/2.multi-replica-disaster-recovery/3.database-high-availability.md
@@ -39,7 +39,7 @@ Root Service 根据心跳数据包可以获得 OBServer 如下的工作状态：
 
 ODP 会感知 OBServer 的异常状态，例如 stopped（`ACTIVE` 状态且 `stop_time` 字段大于 0）状态、`INACTIVE` 状态等，从而避免将应用流量路由到异常节点上。
 
-如果某个节点不稳定，可能时不时提供服务，存在响应慢等各种不正常情况。如果客户端连接到该节点，将导致客户端感受到不稳定。OceanBase 数据库提供了 `STOP SERVER` 命令用于隔离节点。隔离后，该节点不会对外提供服务，ODP 也不会把请求路由到该节点上，可以安全的进行诊断/替换/维修等动作，是运维和应急的利器。Stop Server 会检查所有剩余副本是否满足多数派、是否日志同步，当条件不满足的时候 Stop Server 操作会返回失败；条件满足的情况下等待故障节点上的 Leader 全部切走后系统会返回成功。Stop Server 成功后保证能够做任何运维动作，包括 Kill observer 进程。Stop Server 的详细操作请参见 [隔离节点](暂时无法加链接)。
+如果某个节点不稳定，可能时不时提供服务，存在响应慢等各种不正常情况。如果客户端连接到该节点，将导致客户端感受到不稳定。OceanBase 数据库提供了 `STOP SERVER` 命令用于隔离节点。隔离后，该节点不会对外提供服务，ODP 也不会把请求路由到该节点上，可以安全的进行诊断/替换/维修等动作，是运维和应急的利器。Stop Server 会检查所有剩余副本是否满足多数派、是否日志同步，当条件不满足的时候 Stop Server 操作会返回失败；条件满足的情况下等待故障节点上的 Leader 全部切走后系统会返回成功。Stop Server 成功后保证能够做任何运维动作，包括 Kill observer 进程。Stop Server 的详细操作请参见 [隔离节点](../../1.clutser-management/3.common-cluster-operations/6.isolation-a-node.md)。
 
 节点隔离适用于单机房故障场景：
 
