--- a/zh-CN/6.manage/4.high-availability/3.recyclebin-management/5.purge-the-recyclebin.md
+++ b/zh-CN/6.manage/4.high-availability/3.recyclebin-management/5.purge-the-recyclebin.md
@@ -35,11 +35,11 @@
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
+   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
 
 2. 执行 `SHOW RECYCLEBIN` 语句，获取回收站中对象的名称。
 
-   ```sql
+   ```shell
    obclient [(none)]> SHOW RECYCLEBIN;
    +-------------------------------------+-------------------+----------+----------------------------+
    | OBJECT_NAME                         | ORIGINAL_NAME     | TYPE     | CREATETIME                 |
@@ -138,7 +138,7 @@ OceanBase 数据库当前支持通过集群级配置项 `recyclebin_object_expir
 
 * 值为非 `0s` 时，表示 Purge 一段时间前进入回收站的对象。
 
-有关集群级配置项 `recyclebin_object_expire_time` 的更多信息，请参见 [recyclebin_object_expire_time](../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/166.recyclebin_object_expire_time.md)。
+有关集群级配置项 `recyclebin_object_expire_time` 的更多信息，请参见 [recyclebin_object_expire_time](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/166.recyclebin_object_expire_time.md)。
 
 1. 使用 `root` 用户登录数据库的 `sys` 租户。
 
@@ -148,7 +148,7 @@ OceanBase 数据库当前支持通过集群级配置项 `recyclebin_object_expir
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
+   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
 
 2. 执行以下语句，开启自动清理回收站的功能并指定清理多少时间前进入回收站的对象。
 
