--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/1.overview-of-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/1.overview-of-log-archive.md
@@ -38,7 +38,7 @@
 
 * 在使用 `ALTER SYSTEM` 命令关闭日志归档前，您也需要首先确定状态机处于 `PREPARE` 、 `BEGINNING` 、 `DOING` 或 `INTERRUPTED` 这 4 个状态中的任意一个状态，才可以发起命令，命令成功执行之后状态机处于 `STOPPING` ， 一直到状态机推到 `STOP` 才表明归档已经关闭。
 
-* 如果某一时刻状态机处于 `INTERRUPTED` ，即表示发生断流，此时日志归档行为会暂停，您需要先关闭归档后再重新打开。关闭归档的相关操作请参见 [关闭日志归档](3.stop-log-backup.md)。
+* 如果某一时刻状态机处于 `INTERRUPTED` ，即表示发生断流，此时日志归档行为会暂停，您需要先关闭归档后再重新打开。关闭归档的相关操作请参见 [关闭日志归档](4.stop-log-archive.md)。
 
 如果不满足上述状态，则可能会导致开启或关闭日志归档的命令执行失败。命令执行失败对系统没有任何影响。
 
