--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/5.view-log-archive-piece.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/5.view-log-archive-piece.md
@@ -16,7 +16,7 @@
 
    示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> SELECT * FROM oceanbase.CDB_OB_ARCHIVELOG_PIECE_FILES\G
    *************************** 1. row ***************************
                 TENANT_ID: 1002
@@ -177,7 +177,7 @@
 
    MySQL 租户查看本租户所有 Piece 的示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_ARCHIVELOG_PIECE_FILES\G
    *************************** 1. row ***************************
                   DEST_ID: 2
@@ -266,4 +266,4 @@
    4 rows in set
    ```
 
-更多 `CDB_OB_ARCHIVELOG_PIECE_FILES` 视图的说明，请参见 [CDB_OB_ARCHIVELOG_PIECE_FILES](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/86.oceanbase-cdb_ob_archivelog_piece_files-of-mysql-mode.md)。
+更多 `CDB_OB_ARCHIVELOG_PIECE_FILES` 视图的说明，请参见 [CDB_OB_ARCHIVELOG_PIECE_FILES](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/86.oceanbase-cdb_ob_archivelog_piece_files-of-mysql-mode.md)。
