--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/6.view-log-archive-progress.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/6.view-log-archive-progress.md
@@ -10,7 +10,7 @@
 
 2. 执行以下语句，查看日志归档进度。
 
-   ```sql
+   ```shell
    obclient [(none)]> SELECT * FROM oceanbase.CDB_OB_ARCHIVELOG\G
    *************************** 1. row ***************************
                       TENANT_ID: 1002
@@ -73,7 +73,7 @@
 
    `1004` 租户的 `round_id` 是 `1`，表明是首次开启归档，归档介质的类型是 `OSS`，存储桶是 `oceanbase-test-bucket` ，路径是 `/backup/archive` 。 自开启归档以来共产生了 2 个 Piece， `piece id` 分别是 `1` 和 `2`，已归档日志的范围是 `'2022-06-20 01:00:00.000000'` ~ `'2022-06-21 08:00:00.000000'` ，原始日志数据量是 `150GB` ，经过压缩之后的实际归档数据量是 `30GB` ，压缩率是 5。
 
-更多 `CDB_OB_ARCHIVELOG` 视图的说明，请参见 [CDB_OB_ARCHIVELOG](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/133.oceanbase-cdb_ob_archivelog-of-mysql-mode.md)。
+更多 `CDB_OB_ARCHIVELOG` 视图的说明，请参见 [CDB_OB_ARCHIVELOG](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/133.oceanbase-cdb_ob_archivelog-of-mysql-mode.md)。
 
 ## 用户租户查看当前租户的归档进度
 
@@ -90,7 +90,7 @@
 
    MySQL 租户查看本租户所有 Piece 的示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_ARCHIVELOG\G
    *************************** 1. row ***************************
                         DEST_ID: 2
