--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/2.initiate-full-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/2.initiate-full-data-backup.md
@@ -8,7 +8,7 @@
 
 * 确认当前已开启日志归档，仅当日志归档任务的 `STATUS` 为 `DOING` 时，才能开始数据备份。
 
-  开启日志归档的相关操作请参见 [开启日志归档](../3.log-archive/2.initiate-log-backup.md)。
+  开启日志归档的相关操作请参见 [开启日志归档](../3.log-archive/3.initiate-log-archive.md)。
   
 ## 备份准备（可选）
 
@@ -19,24 +19,24 @@
 2. （可选）执行以下命令，设置备份的密码。
 
    <main id="notice" type='explain'>
-   <h4>说明</h4>
-   <p>该密码为备份后的备份集的密码。如果设置了该选项，在使用该备份集进行恢复时，需要输入该密码，且该密码不能被删除。</p>
+      <h4>说明</h4>
+      <p>该密码为备份后的备份集的密码。如果设置了该选项，在使用该备份集进行恢复时，需要输入该密码，且该密码不能被删除。</p>
    </main>
 
-   ```sql
+   ```shell
    obclient [(none)]> SET ENCRYPTION ON IDENTIFIED BY 'password' ONLY;
    ```
 
    示例：
 
-   ```sql
+   ```shell
    obclient [(none)]> SET ENCRYPTION ON IDENTIFIED BY '******' ONLY；
    ```
 
    <main id="notice" type='explain'>
-   <h4>说明</h4>
-   <p>设置备份密码后，在未发起数据备份前，您可以通过断开会话再重新连接数据库的方式取消本次设置。</p>
-  </main>
+      <h4>说明</h4>
+      <p>设置备份密码后，在未发起数据备份前，您可以通过断开会话再重新连接数据库的方式取消本次设置。</p>
+   </main>
 
 ## 发起全量备份
 
@@ -56,7 +56,7 @@
 
       该方式会对集群中的所有租户发起全量数据备份。
 
-      ```sql
+      ```shell
       obclient [(none)]> ALTER SYSTEM BACKUP DATABASE;
       ```
 
@@ -68,7 +68,7 @@
 
       对 `mysql_tenant` 租户发起全量数据备份的示例如下：
 
-      ```sql
+      ```shell
       obclient [(none)]> ALTER SYSTEM BACKUP TENANT = mysql_tenant;
       ```
 
@@ -79,7 +79,7 @@
 
       命令执行成功后，在本示例中，系统会对集群中的 `mysql_tenant` 租户发起全量数据备份。
 
-   全量备份过程中，可以实时查看全量备份进度，具体操作请参见 [查看数据备份进度](5.view-data-backup-progress.md)。
+   全量备份过程中，可以实时查看全量备份进度，具体操作请参见 [查看数据备份进度]()。
   
 
 ### 用户租户发起全量备份
@@ -92,7 +92,7 @@
 
 2. 执行以下语句，发起全量数据备份。
 
-    ```sql
+    ```shell
     obclient [(none)]> ALTER SYSTEM BACKUP DATABASE;
     ```
    
