--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/2.initiate-the-tenant-restore.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/2.initiate-the-tenant-restore.md
@@ -16,7 +16,7 @@
 
    仅在数据备份时添加了密码的场景下才需要设置备份的恢复密码。
 
-   ```sql
+   ```shell
    obclient [(none)]> SET DECRYPTION IDENTIFIED BY 'password'；
    ```
 
@@ -24,7 +24,7 @@
 
    示例：
 
-   ```sql
+   ```shell
    obclient [(none)]> SET DECRYPTION IDENTIFIED BY '******'；
    
    obclient [(none)]> SET DECRYPTION IDENTIFIED BY '******','******'；
@@ -32,7 +32,7 @@
 
 3. 设置配置项 `restore_concurrency`。
 
-   集群级配置项 `restore_concurrency` 用于控制恢复是否允许进行。默认值为 0，取值范围为 [0, 512]，值设置为大于 0 即可，该配置项将在 4.1 版本后废弃不再使用。有关配置项 `restore_concurrency` 的更多介绍，请参见 [restore_concurrency](../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/170.restore_concurrency.md)。
+   集群级配置项 `restore_concurrency` 用于控制恢复是否允许进行。默认值为 0，取值范围为 [0, 512]，值设置为大于 0 即可，该配置项将在 4.1 版本后废弃不再使用。有关配置项 `restore_concurrency` 的更多介绍，请参见 [restore_concurrency](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/170.restore_concurrency.md)。
 
    ```shell
    obclient [(none)]> ALTER SYSTEM SET restore_concurrency = 10;
@@ -44,19 +44,19 @@
 
    * 恢复到指定时间戳
 
-      ```sql
+      ```shell
       obclient [(none)]> ALTER SYSTEM RESTORE dest_tenant_name FROM uri UNTIL TIME=timestamp WITH restore_option [DESCRIPTION description];
       ```
 
    * 恢复到指定 SCN
 
-      ```sql
+      ```shell
       obclient [(none)]> ALTER SYSTEM RESTORE dest_tenant_name FROM uri UNTIL SCN=scn WITH restore_option [DESCRIPTION description];
       ```
 
    * 恢复到最新位点
 
-      ```sql
+      ```shell
       obclient [(none)]> ALTER SYSTEM RESTORE dest_tenant_name FROM uri WITH restore_option [DESCRIPTION description];
       ```
 
@@ -76,31 +76,31 @@
 
       * 从数据备份路径 `file:///data/nfs/backup/data` 与日志归档路径 `file:///data/nfs/backup/archive` 恢复租户 `mysql` 到指定时间戳 `2022-06-1 00:00:00`, 指定资源池为 `restore_pool`
 
-         ```sql
+         ```shell
          obclient [(none)]> ALTER SYSTEM RESTORE mysql FROM 'file:///data/nfs/backup/data,file:///data/nfs/backup/archive' UNTIL TIME='2022-06-1 00:00:00' WITH 'pool_list=restore_pool';
          ```
 
       * 从数据备份路径 `file:///data/nfs/backup/data` 与日志归档路径 `file:///data/nfs/backup/archive` 恢复租户 `mysql` 恢复到当前最新的归档位点, 指定资源池为 `restore_pool`
 
-         ```sql
+         ```shell
          obclient [(none)]> ALTER SYSTEM RESTORE mysql FROM 'file:///data/nfs/backup/data,file:///data/nfs/backup/archive' WITH 'pool_list=restore_pool';
          ```
 
       * 从数据备份路径 `file:///data/nfs/backup/data` 与日志归档路径 `file:///data/nfs/backup/archive` 恢复租户 `mysql` 到指定 scn `1658285759724047000`, 指定资源池为 `restore_pool`
 
-         ```sql
+         ```shell
          obclient [(none)]> ALTER SYSTEM RESTORE mysql FROM 'file:///data/nfs/backup/data,file:///data/nfs/backup/archive' UNTIL SCN='1658285759724047000' WITH 'pool_list=restore_pool';
          ```
 
       * 从数据备份路径 `file:///data/nfs/backup/data` 与日志归档路径 `file:///data/nfs/backup/archive` 恢复租户 `mysql` 到指定时间戳 `2022-06-1 00:00:00`, 指定资源池为 `restore_pool`, 副本 Locality 为 `F@z1,F@z2,F@z3`。
 
-         ```sql
+         ```shell
          obclient [(none)]> ALTER SYSTEM RESTORE mysql FROM 'file:///data/nfs/backup/data,file:///data/nfs/backup/archive' UNTIL TIME='2022-06-1 00:00:00' WITH 'pool_list=restore_pool&locality=F@z1,F@z2,F@z3';
          ```
 
       * 从数据备份路径 `file:///data/nfs/backup/data` 与日志归档路径 `file:///data/nfs/backup/archive` 恢复租户 `mysql` 到指定时间戳 `2022-06-1 00:00:00`, 指定资源池为 `restore_pool`, 副本 Locality 为 `F@z1,F@z2,F@z3`, 并指定 `primary_zone` 为 `z1`。
 
-         ```sql
+         ```shell
          obclient [(none)]> ALTER SYSTEM RESTORE mysql FROM 'file:///data/nfs/backup/data,file:///data/nfs/backup/archive' UNTIL TIME='2022-06-1 00:00:00' WITH 'pool_list=restore_pool&locality=F@z1,F@z2,F@z3&primary_zone=z1';
          ```
 
@@ -110,7 +110,7 @@
 
       * 从 OSS 备份路径 `oss://oceanbase-test-bucket/backup/data/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx` 与 OSS 日志归档路径 `oss://oceanbase-test-bucket/backup/archive/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx`恢复租户 `mysql` 到指定时间戳 `2022-06-1 00:00:00`, 指定资源池为 `restore_pool`。
 
-         ```sql
+         ```shell
          obclient [(none)]> ALTER SYSTEM RESTORE mysql FROM 'oss://oceanbase-test-bucket/backup/data/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx,oss://oceanbase-test-bucket/backup/archive/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx' UNTIL TIME='2022-06-1 00:00:00' WITH 'pool_list=restore_pool';
          ```
 
@@ -120,17 +120,17 @@
 
       语句如下：
 
-      ```sql
+      ```shell
       obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_TENANTS;
       ```
 
       查询结果中，`TENANT_NAME` 列中以 `META$` 开头的租户即为 Meta 租户，当 Meta 租户的状态为 `TENANT_STATUS_NORMAL` 时，则表示 Meta 租户创建成功。
 
-      更多视图 `oceanbase.DBA_OB_TENANTS` 的字段说明信息请参见 [oceanbase.DBA_OB_TENANTS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
+      更多视图 `oceanbase.DBA_OB_TENANTS` 的字段说明信息请参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
 
    2. 设置配置项 `ha_low_thread_score`。
 
-      租户级配置项 `ha_low_thread_score` 用于设置高可用低优先级线程的当前工作线程数。默认值为 0，取值范围为 [0, 100]，建议修改为 10。有关配置项 `ha_low_thread_score` 的更多介绍，请参见 [ha_low_thread_score](../../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/43.ha_low_thread_score.md)。
+      租户级配置项 `ha_low_thread_score` 用于设置高可用低优先级线程的当前工作线程数。默认值为 0，取值范围为 [0, 100]，建议修改为 10。有关配置项 `ha_low_thread_score` 的更多介绍，请参见 [ha_low_thread_score](../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/43.ha_low_thread_score.md)。
 
       语句示例如下：
 
@@ -146,4 +146,4 @@
 
 ## 相关文档
 
-更多恢复相关的介绍，请参见 [恢复架构](../../../../7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/5.backup-and-recovery/4.recovery-architecture.md)。
+更多恢复相关的介绍，请参见 [恢复架构](../../../7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/5.backup-and-recovery/4.recovery-architecture.md)。
