--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/5.view-the-restore-history.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/5.view-the-restore-history.md
@@ -8,7 +8,7 @@
 
 2. 进入 `oceanbase` 数据库。
 
-   ```sql
+   ```shell
    obclient [(none)]> USE oceanbase;
    ```
 
@@ -16,7 +16,7 @@
 
    示例如下：
 
-   ```sql
+   ```shell
    obclient [oceanbase]> SELECT * FROM CDB_OB_RESTORE_HISTORY\G
    *************************** 1. row ***************************
                        TENANT_ID: 1
@@ -82,4 +82,4 @@
 
 ## 后续操作
 
-恢复操作执行成功后, 恢复后的租户均为备租户，您需要执行备切主命令，将备租户转换为主租户，具体操作请参见 [备租户转为主租户](6.failover-standby-tenant.md)。
+恢复操作执行成功后, 恢复后的租户均为备租户，您需要执行备切主命令，将备租户转换为主租户，具体操作请参见 [备租户转为主租户](6.active-standby-tenant.md)。
