modify doc issues

--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/12.view-cluster-parameters.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/12.view-cluster-parameters.md
@@ -12,7 +12,7 @@
 
   与 `SHOW` 语句不同，通过 `GV$OB_PARAMETERS` 视图可以查看集群中的所有配置项（含隐藏配置项，即 `_xx_xx` 格式的配置项）及其所有属性描述。
 
-有关配置项的更多说明，请参见 [系统配置项概述](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview-2.md)。
+有关配置项的更多说明，请参见 [系统配置项概述](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview.md)。
 
 ## 通过 SHOW 语句查看集群配置项
 
@@ -26,7 +26,7 @@
    obclient -h10.xx.xx.xx -P2883 -utest@mysql -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
+   有关更加详细的连接数据库的操作指引，参见 [连接数据库概述（MySQL 模式）](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) 和 [连接数据库概述（Oracle 模式）](../../../3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
 2. 执行以下命令，查看集群配置项。
 
@@ -91,7 +91,7 @@
    obclient -h10.xx.xx.xx -P2883 -utest@mysql -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
+   有关更加详细的连接数据库的操作指引，参见 [连接数据库概述（MySQL 模式）](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) 和 [连接数据库概述（Oracle 模式）](../../../3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
 2. 执行以下命令，进入 `oceanbase` 数据库。
 
@@ -132,4 +132,4 @@
 
 * [租户系统变量](../../2.tenant-management/5.system-variable-of-tenant.md)
 
-有关每个配置项的详细介绍，请参见 [系统配置项](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview-2.md)。
+有关每个配置项的详细介绍，请参见 [系统配置项](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview.md)。
