--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.locality-common-operations/5.adjust-replica-distribution.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.locality-common-operations/5.adjust-replica-distribution.md
@@ -117,6 +117,6 @@
 
 * [增加副本](3.add-replica.md)
 
-* [减少副本](4.reduce-replicas.md)
+* [减少副本](4.reduce-replica.md)
 
-* [调整 Primary Zone](pr 合并后添加)
+* [调整 Primary Zone](../../../2.tenant-management/5.commom-tenant-operations/8.tenant-scale-in-and-out/4.adjust-primary-zone.md)
