--- a/zh-CN/6.manage/5.security-and-permissions/6.security-audit/1.security-audit-overview.md
+++ b/zh-CN/6.manage/5.security-and-permissions/6.security-audit/1.security-audit-overview.md
@@ -37,6 +37,5 @@
 有关安全审计的相关操作，参见：
 
 * [开启安全审计](2.audit-open.md)
-* [设置审计规则](3.set-up-audit-rules.md)
-* [查看审计规则](4.view-audit-rules.md)
-* [查看审计记录](5.audit-process.md)
+* [设置和查看审计规则](3.set-up-and-view-audit-rules.md)
+* [查看审计记录](5.audit-records.md)
