--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/5.delete-a-node.md
@@ -42,7 +42,7 @@ Unit 自动迁移过程中，迁移任务会占用迁出节点与迁入节点的
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
+   有关更加详细的连接数据库的操作指引，参见 [连接数据库概述（MySQL 模式）](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) 和 [连接数据库概述（Oracle 模式）](../../../3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
 2. （可选）手动迁移待删除节点上的 Unit。
 
@@ -92,7 +92,7 @@ Unit 自动迁移过程中，迁移任务会占用迁出节点与迁入节点的
 
       * `SVR_IP`：表示该 Unit 所属的节点 IP。
 
-      有关 `oceanbase.DBA_OB_UNITS` 视图的更多说明，请参见 [oceanbase.DBA_OB_UNITS](../../../7.reference/5.system-reference/4.system-view-for-mysql/2.dictionary-view-5/61.oceanbase-dba_ob_units.md)。
+      有关 `oceanbase.DBA_OB_UNITS` 视图的更多说明，请参见 [oceanbase.DBA_OB_UNITS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/61.oceanbase-dba_ob_units-of-mysql-mode.md)。
 
    2. 根据查询结果，执行以下命令，手动迁移 Unit。
 
@@ -118,7 +118,7 @@ Unit 自动迁移过程中，迁移任务会占用迁出节点与迁入节点的
 
       该命令可多次执行，如果手动迁移 Unit 失败，可以根据报错信息解决问题后再重新执行。
 
-      更多关于 Unit 迁移的操作及说明，请参见 [Unit 迁移](../../3.replica-management/2.replica-distribution/2.common-operations/7.unit-migration.md)。
+      更多关于 Unit 迁移的操作及说明，请参见 [Unit 迁移](../../3.replica-management/2.replica-distribution/2.locality-common-operations/7.unit-migration.md)。
 
 3. 执行以下命令，删除节点。
 
@@ -212,4 +212,4 @@ Cancel Delete Server 的具体操作如下：
 
 * [删除 Zone](9.delete-a-zone.md)
 
-* [Unit 迁移](../../3.replica-management/2.replica-distribution/2.common-operations/7.unit-migration.md)
+* [Unit 迁移](../../3.replica-management/2.replica-distribution/2.locality-common-operations/7.unit-migration.md)
