--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/7.replace-a-node.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/7.replace-a-node.md
@@ -12,7 +12,7 @@
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
+   有关更加详细的连接数据库的操作指引，参见 [连接数据库概述（MySQL 模式）](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) 和 [连接数据库概述（Oracle 模式）](../../../3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
 2. 在待替换节点所在的 Zone 上添加新节点。
 
@@ -39,7 +39,7 @@
       6 rows in set
       ```
 
-      有关 `oceanbase.DBA_OB_SERVERS` 视图的更多详细信息，请参见 [oceanbase.DBA_OB_SERVERS](../../../7.reference/5.system-reference/4.system-view-for-mysql/2.dictionary-view-5/50.oceanbase-dba_ob_servers.md)。
+      有关 `oceanbase.DBA_OB_SERVERS` 视图的更多详细信息，请参见 [oceanbase.DBA_OB_SERVERS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/50.oceanbase-dba_ob_servers-of-mysql-mode.md)。
 
    2. 根据节点 IP 查询待替换的节点的 Unit 列表。
 
@@ -101,7 +101,7 @@
 
       如果查询结果为空，则表示 Unit 迁移完成。
 
-   更多关于 Unit 迁移的操作及说明，请参见 [Unit 迁移](../../3.replica-management/2.replica-distribution/2.common-operations/7.unit-migration.md)。
+   更多关于 Unit 迁移的操作及说明，请参见 [Unit 迁移](../../3.replica-management/2.replica-distribution/2.locality-common-operations/7.unit-migration.md)。
 
 4. 等待旧节点上的所有 Unit 迁移完成后，将旧节点删除。
 
