--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/8.1.start-a-zone.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/8.1.start-a-zone.md
@@ -20,7 +20,7 @@
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
+   有关更加详细的连接数据库的操作指引，参见 [连接数据库概述（MySQL 模式）](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) 和 [连接数据库概述（Oracle 模式）](../../../3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
 2. 执行以下命令，启动 Zone。
 
@@ -56,7 +56,7 @@
 
    根据查询结果可以看到， Zone 的状态从 `INACTIVE` 变为 `ACTIVE`，表示 Zone 启动成功。
 
-   有关 `oceanbase.DBA_OB_ZONES` 视图的更多详细信息，请参见 [oceanbase.DBA_OB_ZONES](../../../7.reference/5.system-reference/4.system-view-for-mysql/2.dictionary-view-5/63.oceanbase-dba_ob_zones.md)。
+   有关 `oceanbase.DBA_OB_ZONES` 视图的更多详细信息，请参见 [oceanbase.DBA_OB_ZONES](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/63.oceanbase-dba_ob_zones-of-mysql-mode.md)。
 
 ## 相关文档
 
