--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/8.add-a-zone.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/8.add-a-zone.md
@@ -12,7 +12,7 @@
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
+   有关更加详细的连接数据库的操作指引，参见 [连接数据库概述（MySQL 模式）](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) 和 [连接数据库概述（Oracle 模式）](../../../3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
 2. 执行以下命令，在集群中添加 Zone。
 
@@ -55,7 +55,7 @@
 
    查询结果中有新添加的 Zone，则表示添加 Zone 成功，新添加成功的 Zone 的状态为 `INACTIVE`。
 
-   有关 `oceanbase.DBA_OB_ZONES` 视图的更多详细信息，请参见 [oceanbase.DBA_OB_ZONES](../../../7.reference/5.system-reference/4.system-view-for-mysql/2.dictionary-view-5/63.oceanbase-dba_ob_zones.md)。
+   有关 `oceanbase.DBA_OB_ZONES` 视图的更多详细信息，请参见 [oceanbase.DBA_OB_ZONES](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/63.oceanbase-dba_ob_zones-of-mysql-mode.md)。
 
 4. 添加 Zone 后，如果需要使用该 Zone，还需要启动 Zone，使 Zone 的状态变为 `ACTIVE`。
 
