--- a/zh-CN/6.manage/2.tenant-management/5.common-tenant-operations/9.modify-resource-pool-properties.md
+++ b/zh-CN/6.manage/2.tenant-management/5.common-tenant-operations/9.modify-resource-pool-properties.md
@@ -72,7 +72,7 @@
 
     `ALTER RESOURCE POOL` 语句的详细说明，参见 [ALTER RESOURCE POOL](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/3.alter-resource-pool.md)。
 
-    `ALTER RESOURCE TENANT` 语句的详细说明，参见 [ALTER RESOURCE TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/2.alter-resource-tenant.md)。
+    `ALTER RESOURCE TENANT` 语句的详细说明，参见 [ALTER RESOURCE TENANT](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/3.alter-resource-tenant.md)。
 
     示例：
 
