--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/1.locality-overview.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/1.locality-overview.md
@@ -18,7 +18,7 @@ replicas{量词}@location
 
 |  **元素**  |       **说明**        |
 |------------|-----------------------|
-|  replicas  | 表示副本类型。replicas 的值为副本名称，可以在 [副本介绍](../1.copy-introduction.md) 中的副本类型说明表中的名称列获得支持的值（支持全名和简写）。|
+|  replicas  | 表示副本类型。replicas 的值为副本名称，可以在 [副本介绍](../1.replica-introduction.md) 中的副本类型说明表中的名称列获得支持的值（支持全名和简写）。|
 |  location  | 表示位置。它是系统已知的一组枚举值。location 的值为 Zone 的名称。集群和租户中的各 Zone 的名称可以通过 `oceanbase.DBA_OB_ZONES` 视图查询。<br> 有关 `oceanbase.DBA_OB_ZONES` 视图的详细信息，参见 [oceanbase.DBA_OB_ZONES](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/63.oceanbase-dba_ob_zones-of-mysql-mode.md)。|
 |    量词    | 不指定量词的时候，表示一个副本。用 `{n}` 表示 n 个副本，一个分区在一个 Zone 中最多有一个全能型副本。|
 
