--- a/zh-CN/6.manage/4.high-availability/2.multi-replica-disaster-recovery/4.disaster-tolerance-architecture-and-level.md
+++ b/zh-CN/6.manage/4.high-availability/2.multi-replica-disaster-recovery/4.disaster-tolerance-architecture-and-level.md
@@ -42,21 +42,21 @@ OceanBase 数据库的部署模式通过租户级别的 Locality 属性来描述
 
 ## 单机容灾
 
-OceanBase 数据库内部的心跳机制能够自动处理节点异常，OBProxy 也能够感知节点异常状态，从而避免应用层对节点异常状态的感知。为了避免节点的非通断型故障引起的乒乓效应持续短暂影响应用，应该第一时间隔离异常节点，隔离异常节点的相关操作可参见 [隔离节点](../../1.clutser-management/3.common-cluster-operations/6.isolation-a-node.md)；如果隔离节点后自动产生的 Leader 不是最优，您可以通过主动切主的方式将 Primary Zone 切到指定 Zone，主动切主的详细操作请参见 [数据库层高可用](3.database-high-availability.md)。
+OceanBase 数据库内部的心跳机制能够自动处理节点异常，OBProxy 也能够感知节点异常状态，从而避免应用层对节点异常状态的感知。为了避免节点的非通断型故障引起的乒乓效应持续短暂影响应用，应该第一时间隔离异常节点，隔离异常节点的相关操作可参见 [隔离节点](../../1.cluster-management/3.common-cluster-operations/6.isolation-a-node.md)；如果隔离节点后自动产生的 Leader 不是最优，您可以通过主动切主的方式将 Primary Zone 切到指定 Zone，主动切主的详细操作请参见 [数据库层高可用](3.database-high-availability.md)。
 
 对于故障节点的后续处理，分为以下两种场景：
 
 * 故障 OBServer 可以重新启动
   
-  不论故障机器之前处于何种心跳状态，OBServer 重新启动后，OBServer 与 Root Service 之间的心跳数据包恢复以后，OBServer 可重新提供服务。重启 OBServer 的详细操作请参见 [重启节点](../../1.clutser-management/3.common-cluster-operations/3.restart-a-node.md)。
+  不论故障机器之前处于何种心跳状态，OBServer 重新启动后，OBServer 与 Root Service 之间的心跳数据包恢复以后，OBServer 可重新提供服务。重启 OBServer 的详细操作请参见 [重启节点](../../1.cluster-management/3.common-cluster-operations/3.restart-a-node.md)。
 
 * 故障 OBServer 损坏，无法重新启动
   
-  在确认 OBServer 损坏无法重新启动后，需要走机器替换流程，即下线故障节点，并重新上线新机器。有关替换机器的详细操作请参见 [替换节点](../../1.clutser-management/3.common-cluster-operations/7.replace-a-node.md)。
+  在确认 OBServer 损坏无法重新启动后，需要走机器替换流程，即下线故障节点，并重新上线新机器。有关替换机器的详细操作请参见 [替换节点](../../1.cluster-management/3.common-cluster-operations/7.replace-a-node.md)。
 
 ## 机房容灾
 
-机房级容灾要求集群部署满足多机房部署条件，例如，同城三中心和两地三中心。该部署模式下，任何机房故障导致少数派副本不可用时，剩下的多数派副本依然可以继续提供服务，保证零数据丢失。如果机房故障仅影响到单个 Zone，您可以通过 Stop Zone 的方式隔离故障副本，通过 Stop Zone 隔离故障 Zone 的相关操作请参见 [隔离 Zone](../../1.clutser-management/3.common-cluster-operations/11.isolation-a-zone.md)；如果机房故障影响到多个 Zone，您可以通过主动切主的方式将 Leader 切换到指定 Zone，主动切主的详细操作请参见 [数据库层高可用](3.database-high-availability.md)。
+机房级容灾要求集群部署满足多机房部署条件，例如，同城三中心和两地三中心。该部署模式下，任何机房故障导致少数派副本不可用时，剩下的多数派副本依然可以继续提供服务，保证零数据丢失。如果机房故障仅影响到单个 Zone，您可以通过 Stop Zone 的方式隔离故障副本，通过 Stop Zone 隔离故障 Zone 的相关操作请参见 [隔离 Zone](../../1.cluster-management/3.common-cluster-operations/11.isolation-a-zone.md)；如果机房故障影响到多个 Zone，您可以通过主动切主的方式将 Leader 切换到指定 Zone，主动切主的详细操作请参见 [数据库层高可用](3.database-high-availability.md)。
 
 ## 城市容灾
 
