--- a/zh-CN/6.manage/5.security-and-permissions/6.security-audit/6.audit-user-logon.md
+++ b/zh-CN/6.manage/5.security-and-permissions/6.security-audit/6.audit-user-logon.md
@@ -43,6 +43,6 @@ obclient> SELECT USERNAME,USERHOST,TIMESTAMP,SQL_TEXT FROM SYS.DBA_AUDIT_TRAIL;
 
 * [开启审计](2.audit-open.md)
 * [设置和查看审计规则](3.set-up-and-view-audit-rules.md)
-* [查看审计记录](5.audit-process.md)
+* [查看审计记录](5.audit-records.md)
 * [审计用户操作](7.audit-user-operations.md)
 * [审计指定数据库对象](8.audit-a-specified-database-object.md)
