--- a/zh-CN/6.manage/5.security-and-permissions/6.security-audit/8.audit-a-specified-database-object.md
+++ b/zh-CN/6.manage/5.security-and-permissions/6.security-audit/8.audit-a-specified-database-object.md
@@ -33,6 +33,6 @@ obclient> AUDIT INSERT, UPDATE, DELETE ON tab1 WHENEVER NOT SUCCESSFUL;
 
 * [开启审计](2.audit-open.md)
 * [设置和查看审计规则](3.set-up-and-view-audit-rules.md)
-* [查看审计记录](5.audit-process.md)
+* [查看审计记录](5.audit-records.md)
 * [审计用户登录](6.audit-user-logon.md)
 * [审计用户操作](7.audit-user-operations.md)
