--- a/zh-CN/5.data-migration/6.migrate-data-from-db2-luw-database-to-oceanbase-database/1.use-dbcat-to-migrate-db2-luw-table-structure-to-oceanbase-database.md
+++ b/zh-CN/5.data-migration/6.migrate-data-from-db2-luw-database-to-oceanbase-database/1.use-dbcat-to-migrate-db2-luw-table-structure-to-oceanbase-database.md
@@ -126,7 +126,7 @@ bin/dbcat convert -H<host> -P<port> -u<user> -p<password>  -D<database> --schema
 这里以导出 DB2 LUW 11.5.x 版本下 database 为 test 的所有对象的结构，并将其迁移到 4.0.0 版本的 OceanBase 集群中的 MySQL 租户为示例。
 
 ```bash
-bin/dbcat convert -H 100.88.109.129 -P 50001 -udb2inst2 -pdb2inst2 --schema TESTDB -DTESTDB --table bmsql_customer --from db2luw115 --to obmysql32x --all
+bin/dbcat convert -H 100.88.109.129 -P 50001 -udb2inst2 -p**1*** --schema TESTDB -DTESTDB --table bmsql_customer --from db2luw115 --to obmysql32x --all
 ```
 
 特别说明：
