--- a/zh-CN/6.manage/5.security-and-permissions/6.security-audit/3.set-up-and-view-audit-rules.md
+++ b/zh-CN/6.manage/5.security-and-permissions/6.security-audit/3.set-up-and-view-audit-rules.md
@@ -2,6 +2,10 @@
 
 开启安全审计后，需要设置具体的安全审计规则来对用户的操作进行审计。
 
+## 使用限制
+
+目前 OceanBase 数据库仅 Oracle 模式支持安全审计功能。
+
 ## 设置审计规则
 
 通过内置的审计管理用户 `ORAAUDITOR` 可以配置审计规则，包括：
