--- a/zh-CN/6.manage/5.security-and-permissions/6.security-audit/5.audit-records.md
+++ b/zh-CN/6.manage/5.security-and-permissions/6.security-audit/5.audit-records.md
@@ -2,6 +2,10 @@
 
 在开启安全审计功能时，会同步设置审计记录的存储方式，支持写入内部表和写入本地磁盘文件两种方式。您可以根据设置到对应的位置查看审计记录。
 
+## 使用限制
+
+目前 OceanBase 数据库仅 Oracle 模式支持安全审计功能。
+
 ## 查看磁盘文件中的审计记录
 
 安全审计信息通过异步写的方式记录在 `<安装目录>/audit/` 下，默认在 `/home/admin/oceanbase/audit/observer_xx_xxxxxx.aud`。
