--- a/zh-CN/6.manage/5.security-and-permissions/6.security-audit/6.audit-user-logon.md
+++ b/zh-CN/6.manage/5.security-and-permissions/6.security-audit/6.audit-user-logon.md
@@ -2,10 +2,9 @@
 
 审计功能可以对用户的登录操作进行审计。
 
-  <main id="notice" >
-    <h4>功能适用性</h4>
-    <p>目前 OceanBase 数据库社区版暂不支持安全审计功能。</p>
-  </main>
+## 使用限制
+
+目前 OceanBase 数据库仅 Oracle 模式支持安全审计功能。
 
 ## 审计指定用户的登录
 
