--- a/zh-CN/6.manage/5.security-and-permissions/6.security-audit/8.audit-a-specified-database-object.md
+++ b/zh-CN/6.manage/5.security-and-permissions/6.security-audit/8.audit-a-specified-database-object.md
@@ -2,10 +2,9 @@
 
 OceanBase 数据库支持审计指定的数据库对象，审计时仅记录针对此对象的特定操作。可以审计的数据库对象包括表（Table）、序列（Sequence）和视图（View）。
 
-  <main id="notice" >
-    <h4>功能适用性</h4>
-    <p>目前 OceanBase 数据库社区版暂不支持安全审计功能。</p>
-  </main>
+## 使用限制
+
+目前 OceanBase 数据库仅 Oracle 模式支持安全审计功能。
 
 ## 审计单个用户在数据库对象上的操作
 
