--- a/zh-CN/6.manage/2.tenant-management/5.common-tenant-operations/12.delete-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.common-tenant-operations/12.delete-tenant.md
@@ -40,7 +40,7 @@ OceanBase 数据库支持通过 `DROP TENANT` 语句删除租户。
 
 4. （可选）为防止恶意或误操作导致的数据不可恢复性丢失，OceanBase 数据库提供了租户级的回收站功能，从而支持租户级的数据的快速恢复功能。回收站默认开启，在系统租户下使用 `SHOW RECYCLEBIN` 语句，可以查看当前系统租户 RECYCLEBIN 中的回收站对象。示例如下：
 
-    回收站的详细说明，请参见 [回收站](../../../7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/4.data-protection/4.recycle-bin.md)。
+    回收站的详细说明，请参见 [回收站](../../4.high-availability/3.recyclebin-management/1.recyclebin-overview.md)。
 
     ```shell
     obclient [oceanbase]> SHOW RECYCLEBIN;
