--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/4.delete-a-database-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/4.delete-a-database-of-mysql-mode.md
@@ -6,7 +6,7 @@
 
 您可以使用 `DROP DATABASE` 语句删除 MySQL 模式下租户的数据库。
 
-如果误删数据库，可以通过回收站功能进行恢复，前提是需要开启回收站功能，相关操作请参见 [数据库、表和索引回收站](../../../5.backup-and-recovery/1.flashback/2.database-table-and-index-recycle-bin.md)。
+如果误删数据库，可以通过回收站功能进行恢复，前提是需要开启回收站功能，相关操作请参见 [恢复回收站对象](../../../../../6.manage/4.high-availability/3.recyclebin-management/4.restore-the-recyclebin-objects.md)。
 
 示例如下：
 
