--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/5.delete-a-node.md
@@ -208,7 +208,7 @@ Cancel Delete Server 的具体操作如下：
 
 * [隔离节点](6.isolation-a-node.md)
 
-* [替换节点](7.replace-a-node.md）
+* [替换节点](7.replace-a-node.md)
 
 * [删除 Zone](9.delete-a-zone.md)
 
