--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/6.isolation-a-node.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/6.isolation-a-node.md
@@ -127,4 +127,4 @@ obclient [(none)]> ALTER SYSTEM ISOLATE SERVER 'svr_ip1:svr_port1', 'svr_ip2:svr
 
 * [删除节点](5.delete-a-node.md)
 
-* [替换节点](7.replace-a-node.md）
+* [替换节点](7.replace-a-node.md)
