--- a/zh-CN/7.reference/1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/7.data-integrity-of-mysql-mode/2.integrity-constraint-type-of-mysql-mode/3.uniqueness-constraint-of-mysql-mode.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/7.data-integrity-of-mysql-mode/2.integrity-constraint-type-of-mysql-mode/3.uniqueness-constraint-of-mysql-mode.md
@@ -18,7 +18,7 @@ obclient> INSERT INTO t1 VALUES(null, 1);
 Query OK, 1 row affected
 
 obclient> INSERT INTO t1 VALUES(null, 1);
-ORA-00001: unique constraint 'NULL-1' for key 'T1_UK_C1_C2' violated
+Query OK, 1 row affected
 
 obclient> INSERT INTO t1 VALUES(null, null);
 Query OK, 1 row affected 
