--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/8.create-tenant.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/8.create-tenant.md
@@ -40,7 +40,7 @@ opt_set_sys_var:
 | RESOURCE_POOL_LIST       | 资源池列表，为创建租户时的必填项。                                                                                                        |
 | DEFAULT TABLEGROUP       | 设置租户默认表组信息，`NULL` 表示取消默认表组。 如果不指定，默认为 `NULL`。                                                                                   |
 | COMMENT                  | 指定注释。                                                                                                                                           |
-| CHARACTER SET \| CHARSET | 指定租户的字符集。                                                                                                                                       |
+| CHARACTER SET \| CHARSET | 指定字符集。                                                                                                                                       |
 | COLLATE                  | 指定字符序。                                                                                                                                          |
 | PRIMARY_ZONE             | 指定租户所在的 Primary Zone 名称。                                                                                                                        |
 | LOCALITY                 | 描述副本在 Zone 间的分布情况。 例如：`F@z1,F@z2,F@z3` 表示 `z1`、`z2`、`z3` 为全功能副本。                                                |
