--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/5.queries-and-subqueries-of-mysql-mode/3.connection-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/5.queries-and-subqueries-of-mysql-mode/3.connection-of-mysql-mode.md
@@ -57,7 +57,7 @@ obclient> SELECT * FROM t1 FULL JOIN t2 ON t1.c1 = t2.c1;
 
 ## Semi 联接 (Semi-Join)
 
-当 A 表和 B 表进行 left/right Semi-Join 的时候，当 A 表和 B 表进行 left/right Semi-Koin的时候，它只返回 A 表中所有能够在 B 表中找到匹配的行或者 B 表中所有能够在 A 表中找到匹配的行。
+当 A 表和 B 表进行 left/right Semi-Join 的时候，当 A 表和 B 表进行 left/right Semi-Join 的时候，它只返回 A 表中所有能够在 B 表中找到匹配的行或者 B 表中所有能够在 A 表中找到匹配的行。
 
 Semi-Join 只能通过子查询展开得到，如下所示。
 
