--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/60.lock-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/60.lock-table-of-mysql-mode.md
@@ -26,7 +26,7 @@ lock_type:
 | **字段名称** | **描述** |
 | --- | --- |
 | table_name  | 指定要锁定的表的名称。 |
-| lock_type | 指定锁定的类型。OceanBase 数据库当前版本所支持的锁定类型如下：<ul> <li> `READ`：所有的 Session 只能读取被锁的表，不能对该表进行修改（包括执行锁的 Session）。</li> <li> `READ LOCAL`：与 `READ` 相同，但允许执行 `INSERT` 命令。</li> <li> `WRITE`：除了当前 Session 被允许读取和修改被锁的表外，其他 Session 的所有访问被完全阻止。</li> <li> `LOW_PRIORITY WRITE`：低优先级的读锁。</li></ul>
+| lock_type | 指定锁定的类型。OceanBase 数据库当前版本所支持的锁定类型如下：<ul> <li> `READ`：所有的 Session 只能读取被锁的表，不能对该表进行修改（包括执行锁的 Session）。</li> <li> `READ LOCAL`：与 `READ` 相同，但允许执行 `INSERT` 命令。</li> <li> `WRITE`：除了当前 Session 被允许读取和修改被锁的表外，其他 Session 的所有访问被完全阻止。</li> <li> `LOW_PRIORITY WRITE`：低优先级的写锁。</li></ul>
  |
 
 ## 示例
