--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md
@@ -90,8 +90,7 @@ table_option_list:
     table_option [ table_option ...]
 
 table_option:
-    | primary_zone
-    | table_tablegroup
+      table_tablegroup
     | block_size
     | compression
     | AUTO_INCREMENT [=] INT_VALUE
