--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/11.alter-tablegroup-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/11.alter-tablegroup-of-oracle-mode.md
@@ -8,7 +8,7 @@
 
 * 修改表组的分区规则。
 
-* 修改表组的 Locality 和 Primary Zone。
+* 修改表组的 Locality。
 
 * 添加和删除一级分区和二级分区。
 
@@ -49,7 +49,6 @@
   
   alter_tablegroup_action:
     SET LOCALITY [=] locality_name
-    |SET PRIMARY_ZONE [=] primary_zone_name
   ```
 
 * 添加非模板一级分区。
@@ -109,7 +108,6 @@
 | subpartition_name              | 指定二级分区的名称。                                                                                             |
 | modify_tg_partition_info       | 修改表组的分区规则。                                                                                             |
 | LOCALITY locality_name         | 指定表组的 Locality。                                                                                        |
-| PRIMARY_ZONE primary_zone_name | 指定表组的主 Zone。                                                                                           |
 | UPDATE GLOBAL INDEXES          | 该子句来决定是否需要对全局索引进行维护。该子句为可选项。                                                                           |
 
 ## 示例
