--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md
@@ -69,8 +69,7 @@ table_option_list:
     table_option [ table_option ...]
 
 table_option:
-    primary_zone
-    | table_group
+      table_group
     | block_size
     | compression
     | comment
@@ -210,7 +209,7 @@ on_commit_option:
 | BLOCK_SIZE                  | 指定表的微块大小。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
 | COMPRESSION                 | 指定存储格式 Flat/Encoding 以及压缩方法，对应如下： <ul><li> `nocompress`：使用 Flat 格式，不进行压缩。</li>   <li> `compress [basic]`：使用 Flat 格式和 lz4_1.0 压缩方法。</li>   <li> `compress for oltp`：使用 Flat 格式和 zstd_1.0 压缩方法。</li>   <li>  `query low` 或者 `query high`：使用 Encoding 格式和  lz4_1.0 压缩方法。</li>   <li>  `archive low` 或者 `archive high`：使用 Encoding 格式和 zstd_1.0 压缩方法。</li> </ul>   |
 | primary_zone                | 指定主 Zone（副本 Leader 所在 Zone）。                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
-| table_tablegroup            | 指定表所属的 TableGroup 属性。                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
+| table_group            | 指定表所属的 TableGroup 属性。                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
 | comment                     | 注释。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
 | LOCALITY                    | 描述副本在 Zone 间的分布情况，例如：`F@z1,F@z2,F@z3` 表示 `z1`、`z2`、`z3` 为全功能副本，`z4` 为只读副本。                                                                                                                                                                                                                                                                                                                                                                                                              |
 | physical_attribute          | `PCTFREE`: 指定宏块保留空间百分比。其它属性 `STORAGE`、`TABLESPACE` 等仅为了语法兼容方便迁移，不生效。                                                                                                                                                                                                                                                                                                                                                                                                         |
@@ -221,10 +220,10 @@ on_commit_option:
 
 ## 示例
 
-* 创建表 `tbl1`，并设置主 Zone 为 `zone1`。
+* 创建表 `tbl1`。
 
   ```sql
-  obclient> CREATE TABLE tbl1 (col1 INT PRIMARY KEY, col2 VARCHAR(50)) PRIMARY_ZONE = 'zone1';
+  obclient> CREATE TABLE tbl1 (col1 INT PRIMARY KEY, col2 VARCHAR(50)) ;
   Query OK, 0 rows affected
   ```
 
@@ -237,8 +236,7 @@ on_commit_option:
                    PCTFREE = 0 
                    BLOCK_SIZE = 16384
                    DUPLICATE_SCOPE='cluster' 
-                   LOCALITY='F@zone1,R{all_server}@zone2' 
-                   PRIMARY_ZONE = 'zone1';
+                   LOCALITY='F@zone1,R{all_server}@zone2' ;
   Query OK, 0 rows affected
   ```
 
