--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/25.create-tablegroup-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/25.create-tablegroup-of-oracle-mode.md
@@ -22,7 +22,6 @@ tablegroup_option [tablegroup_option]
 
 tablegroup_option:
 LOCALITY [=] locality_name
-| PRIMARY_ZONE [=] primary_zone_name
 
 opt_tg_partition_option:
 PARTITION BY 
@@ -47,7 +46,6 @@ opt_tablegroup_option_list:
 
 tablegroup_option:
  LOCALITY [=] locality_name
- | PRIMARY_ZONE [=] primary_zone_name
  ......
 opt_tg_partition_option:
  PARTITION BY 
@@ -64,10 +62,10 @@ tg_subpartition_option:
 
 ## 参数解释
 
-|             参数             |                                                                                                                                                                                                                   描述                                                                                                                                                                                                                    |
-|----------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| tablegroup_name            | 表组名称，最长 64 个字符，字符只能有大小写英文字母，数字和下划线，而且必须以字母或下划线开头，并且不能使用数据库的关键字。                                                                                                                                                                                                                                                                                                                                                                         |
-| opt_tablegroup_option_list | 表组的分区方式。 Locality 和 Primary Zone 必须和组内的表完全一致。组内的表信息不能独立变更某一项，只可以通过操作表组进行批量操作。 相同的 Locality 是指副本类型、个数和位置要完全一致。 相同的 Primary Zone 是指 Leader 位置及其优先级要完全一致。                                                                                                                                                                                                                                  |
+|             参数             |         描述           |
+|----------------------------|------------------------|
+| tablegroup_name            | 表组名称，最长 64 个字符，字符只能有大小写英文字母，数字和下划线，而且必须以字母或下划线开头，并且不能使用数据库的关键字。  |
+| opt_tablegroup_option_list | 表组的分区方式。Locality 必须和组内的表完全一致。组内的表信息不能独立变更某一项，只可以通过操作表组进行批量操作。相同的 Locality 是指副本类型、个数和位置要完全一致。 相同的 Primary Zone 是指 Leader 位置及其优先级要完全一致。   |
 | opt_tg_partition_option    | 表组的分区规则定义，与 `CREATE TABLE` 使用同样的分区方式。 表组没有具体的列定义，所以 `HASH`、`RANGE` 和`LIST` 不需要写出具体的列，只需要指定列个数（`COLUMN_NUM`）。 相同的分区方式： <ul><li> 分区类型相同（例如，都是 Hash+Range 分区）。   </li><li> 如果是 Hash 分区，要求引用的列数相同，并且分区个数相同。   </li><li> 如果是 Range 分区，要求引用的列数相同，并且分区数相同，Range 分割点相同。    对于二级分区，根据其分区类型，要求和上述一致。</li></ul>  |
 
 ## 示例
