日志归档目的端补充sys 租户的描述

--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
@@ -21,7 +21,13 @@
    obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=xxx [PIECE_SWITCH_INRERVAL=xxx] [BINDING=xxx]';
    ```
 
+   <main id="notice" type='explain'>
+   <h4>说明</h4>
+   <p>如果通过 <code>sys<code> 租户配置归档目的端，则需要在语句中指定待发起日志归档的用户租户名（不能指定 <code>sys</code> 租户），例如：<code>ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=file:///data/nfs/backup/archive' TENANT = mysql_tenant;</code>。</p>
+   </main>
+
    设置后，可通过 `DBA_OB_ARCHIVELOG_SUMMARY` 视图查看详细设置信息，具体操作请参见 [查看归档参数](8.view-parameters-of-log-archive.md)。
+
    详细配置说明如下：
 
    * 配置 `LOCATION` (必选)
